--- a/index.html
+++ b/index.html
@@ -1,93 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Free Invoice Generator Online | duvofs</title>
+<meta charset="UTF-8">
+<title>Free Invoice Generator Online | duvofs</title>
 
-  <!-- SEO -->
-  <meta name="description" content="Free online invoice generator. Create, customize, and download professional invoices instantly. No sign-up required.">
-  <meta name="keywords" content="invoice generator, free invoice maker, online invoice, billing software, invoice pdf">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Free invoice generator to create professional invoices online. Download clean PDF invoices instantly. No sign-up required.">
+<meta name="keywords" content="invoice generator, free invoice maker, online invoice pdf, billing software, proforma invoice">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.json">
+<link rel="manifest" href="manifest.json">
+<link rel="stylesheet" href="style.css">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-  <!-- Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Invoice Generator",
-    "operatingSystem": "Web",
-    "applicationCategory": "BusinessApplication",
-    "description": "Create professional invoices online and download as PDF. Free and easy to use.",
-    "offers": {
-      "@type": "Offer",
-      "price": "0",
-      "priceCurrency": "USD"
-    }
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Invoice Generator",
+  "applicationCategory": "BusinessApplication",
+  "operatingSystem": "Web",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
   }
-  </script>
+}
+</script>
 </head>
+
 <body>
 
-  <h1 class="app-title">Invoice Generator</h1>
+<h1 class="title">Invoice Generator</h1>
 
-  <!-- Ad Placeholder -->
-  <div class="ad-box">Advertisement</div>
+<div class="ad-box no-print">Advertisement</div>
 
-  <div class="container">
+<div class="layout">
 
-    <!-- LEFT -->
-    <div class="invoice">
-      <div class="header">
-        <div class="logo-box">+ Add Your Logo</div>
-        <div class="invoice-title">INVOICE</div>
-      </div>
+<div id="invoice-area">
 
-      <div class="row">
-        <input placeholder="Who is this from?" />
-        <input placeholder="Who is this to?" />
-      </div>
+  <div class="invoice-header">
+    <div class="logo">+ Add Your Logo</div>
+    <h2 contenteditable="true">INVOICE</h2>
+  </div>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Item</th>
-            <th>Qty</th>
-            <th>Rate</th>
-            <th>Amount</th>
-          </tr>
-        </thead>
-        <tbody id="items">
-          <tr>
-            <td><input placeholder="Description" /></td>
-            <td><input type="number" value="1" class="qty"></td>
-            <td><input type="number" value="0" class="rate"></td>
-            <td class="amount">$0.00</td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="meta-grid">
+    <input placeholder="Who is this from?">
+    <input placeholder="Who is this to?">
 
-      <button onclick="addItem()">+ Line Item</button>
+    <label contenteditable="true">Date</label>
+    <input type="date">
 
-      <div class="totals">
-        <div>Subtotal: <span id="subtotal">$0.00</span></div>
-        <div>Total: <span id="total">$0.00</span></div>
-      </div>
+    <label contenteditable="true">Payment Terms</label>
+    <input placeholder="Immediate">
+
+    <label contenteditable="true">Due Date</label>
+    <input type="date">
+
+    <label contenteditable="true">PO Number</label>
+    <input placeholder="#">
+  </div>
+
+  <table class="items-table">
+    <thead>
+      <tr>
+        <th class="col-item">Item</th>
+        <th class="col-qty">Qty</th>
+        <th class="col-rate">Rate</th>
+        <th class="col-amount">Amount</th>
+      </tr>
+    </thead>
+    <tbody id="items">
+      <tr class="item-row">
+        <td><input placeholder="Description"></td>
+        <td><input type="number" value="1" class="qty"></td>
+        <td><input type="number" value="0" class="rate"></td>
+        <td class="amount">$0.00</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <button onclick="addItem()">+ Line Item</button>
+
+  <textarea placeholder="Notes" contenteditable="true"></textarea>
+  <textarea placeholder="Terms & Conditions" contenteditable="true"></textarea>
+
+  <div class="totals">
+
+    <div>Subtotal: <span id="subtotal">$0.00</span></div>
+
+    <div class="toggle-row">
+      <span contenteditable="true">Discount</span>
+      <input id="discount" type="number" value="0">
+      <button onclick="toggleType('discount')">↻</button>
+      <span id="discountType">%</span>
     </div>
 
-    <!-- RIGHT -->
-    <div class="side">
-      <button onclick="downloadPDF()">⬇ Download</button>
-      <div class="ad-box small">Advertisement</div>
+    <div class="toggle-row">
+      <span contenteditable="true">Tax</span>
+      <input id="tax" type="number" value="0">
+      <button onclick="toggleType('tax')">↻</button>
+      <span id="taxType">%</span>
     </div>
+
+    <div>
+      <span contenteditable="true">Shipping</span>
+      <input id="shipping" type="number" value="0">
+    </div>
+
+    <div><strong>Total:</strong> <span id="total">$0.00</span></div>
+
+    <div>
+      <span contenteditable="true">Amount Paid</span>
+      <input id="paid" type="number" value="0">
+    </div>
+
+    <div><strong>Balance Due:</strong> <span id="balance">$0.00</span></div>
 
   </div>
 
-  <script src="app.js"></script>
+</div>
+
+<div class="side">
+  <select id="currency">
+    <option value="$">USD ($)</option>
+    <option value="₹">INR (₹)</option>
+    <option value="£">GBP (£)</option>
+    <option value="€">EUR (€)</option>
+  </select>
+
+  <button onclick="downloadPDF()">⬇ Download</button>
+
+  <div class="ad-box no-print">Advertisement</div>
+</div>
+
+</div>
+
+<section class="seo-block">
+<h2>Free Online Invoice Generator</h2>
+<p>
+Create professional invoices instantly using our free invoice generator.
+Perfect for freelancers, consultants, agencies, and small businesses.
+Customize labels, add tax or discounts, choose your currency, and download
+a clean PDF invoice in seconds.
+</p>
+</section>
+
+<script src="app.js"></script>
 </body>
 </html>
